--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
@@ -15,7 +15,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     ports:
-      - '3000:3000'
+      - "3000:3000"
 
   server:
     build: ./server
@@ -23,11 +23,12 @@ services:
     depends_on:
       - db
     ports:
-      - '8080:8080'
+      - "8080:8080"
     stdin_open: true
     env_file: ./.env
     environment:
       - PORT=8080
+      - DB_HOST=db
 
 volumes:
   boutique_hotel:
