--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "sequelize": "^6.19.2"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
