--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,6 @@ services:
     volumes:
       - boutique_hotel:/var/lib/psql
 
-  web:
-    build: ./web
-    restart: always
-    stdin_open: true
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    ports:
-      - "3000:3000"
-
   server:
     build: ./server
     restart: always
@@ -27,8 +18,22 @@ services:
     stdin_open: true
     env_file: ./.env
     environment:
-      - PORT=8080
       - DB_HOST=db
+      - NODE_PORT=8080
+      - DB_NAME=$POSTGRES_USER
+      - DB_USERNAME=$POSTGRES_USER
+      - DB_PASSWORD=$POSTGRES_PASSWORD
+
+  # web:
+  #   build: ./web
+  #   depends_on:
+  #     - server
+  #   restart: always
+  #   stdin_open: true
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   ports:
+  #     - "3000:3000"
 
 volumes:
   boutique_hotel:
