--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,16 @@ services:
   #   ports:
   #     - "3000:3000"
 
+  # admin:
+  #   build: ./web
+  #   depends_on:
+  #     - server
+  #   restart: always
+  #   stdin_open: true
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   ports:
+  #     - "3001:3001"
+
 volumes:
   boutique_hotel:
