--- a/admin/package.json
+++ b/admin/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.5",
   "private": true,
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "serve -s ./build"
+    "serve": "serve -l 3001 -s ./build"
   },
   "eslintConfig": {
     "extends": [
