--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,27 +24,27 @@ services:
       - DB_USERNAME=$POSTGRES_USER
       - DB_PASSWORD=$POSTGRES_PASSWORD
 
-  # web:
-  #   build: ./web
-  #   depends_on:
-  #     - server
-  #   restart: always
-  #   stdin_open: true
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
-  #   ports:
-  #     - "3000:3000"
+  web:
+    build: ./web
+    depends_on:
+      - server
+    restart: always
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - "3000:3000"
 
-  # admin:
-  #   build: ./web
-  #   depends_on:
-  #     - server
-  #   restart: always
-  #   stdin_open: true
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
-  #   ports:
-  #     - "3001:3001"
+  admin:
+    build: ./admin
+    depends_on:
+      - server
+    restart: always
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - "3001:3001"
 
 volumes:
   boutique_hotel:
