--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+# Postgresql root password
 POSTGRES_PASSWORD=boutique_hotel
+# Postgresql root username
 POSTGRES_USER=boutique_hotel
+# Google account's email address
+SMTP_EMAIL=sifatuli.r@gmail.com
+# App password to login to the google account
+# Can achieved from here https://myaccount.google.com/apppasswords
+# To learn more please visit google's my account page https://myaccount.google.com/
+SMTP_PASSWORD=ansunogwxerhbhzq
