--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+# Postgresql root password
 POSTGRES_PASSWORD=
+# Postgresql root username
 POSTGRES_USER=
+# Google account's email address
+SMTP_EMAIL=
+# App password to login to the google account
+# Can achieved from here https://myaccount.google.com/apppasswords
+# To learn more please visit google's my account page https://myaccount.google.com/
+SMTP_PASSWORD=
