update: env file

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ POSTGRES_PASSWORD=boutique_hotel
 # Postgresql root username
 POSTGRES_USER=boutique_hotel
 # Google account's email address
-SMTP_EMAIL=sifatuli.r@gmail.com
-# App password to login to the google account
-# Can achieved from here https://myaccount.google.com/apppasswords
+SMTP_EMAIL=
+# App password to login into the google account
+# Can be achieved from here https://myaccount.google.com/apppasswords
 # To learn more please visit google's my account page https://myaccount.google.com/
-SMTP_PASSWORD=ansunogwxerhbhzq
+SMTP_PASSWORD=
