Update docker-compose to use flexible API url
- Refactor hooks on the admin and landing page to use the flexible API
  url

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ SMTP_EMAIL=
 # Can be achieved from here https://myaccount.google.com/apppasswords
 # To learn more please visit google's my account page https://myaccount.google.com/
 SMTP_PASSWORD=
+# API's URL
+REACT_APP_API_URL="http://localhost:8000"
