--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "server",
-  "version": "0.0.1",
+  "version": "1.4.4",
   "description": "Boutique hotel server application",
   "main": "server.js",
   "private": true,
   "scripts": {
     "start": "node src/server.js",
-    "start-dev": "nodemon src/server.js"
+    "start:dev": "nodemon src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
