--- a/admin/package.json
+++ b/admin/package.json
@@ -1,13 +1,12 @@
 {
   "name": "boutique-hotel",
-  "version": "0.2.5",
+  "version": "1.4.4",
   "private": true,
   "scripts": {
-    "dev": "set PORT=3001 && react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "serve -l 3001 -s ./build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +45,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "serve": "^13.0.2",
     "tailwindcss": "^3.0.24"
   }
 }
