--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ POSTGRES_PASSWORD=boutique_hotel
 # Postgresql root username
 POSTGRES_USER=boutique_hotel
 # Google account's email address
-SMTP_EMAIL=
+SMTP_EMAIL=sifatuli.r@gmail.com
 # App password to login into the google account
 # Can be achieved from here https://myaccount.google.com/apppasswords
 # To learn more please visit google's my account page https://myaccount.google.com/
-SMTP_PASSWORD=
+SMTP_PASSWORD=cwbzcgzivmpejwhn
 # API's URL
 REACT_APP_API_URL="http://localhost:8000"
