--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.3",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
